# Tablo.id

./: README.md  pyproject.toml
tabloid/: manage.py
tabloid/main/management/commands/: fill_db.py
tabloid/posts/: api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
tabloid/posts/migrations/: 0001_initial.py
tabloid/posts/templates/posts/: post_create.html  post_detail.html  post_edit.html  post_list.html
tabloid/tabloid/: asgi.py  settings.py  urls.py  wsgi.py
tabloid/templates/: base.html
tabloid/users/: forms.py  models.py  urls.py  views.py
tabloid/users/migrations/: 0001_initial.py
tabloid/users/templates/users/: login.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
